--- a/templates/input_data.html
+++ b/templates/input_data.html
@@ -20,7 +20,7 @@
   >
     <section
       id="input"
-      class="flex items-center justify-center min-h-screen flex-col px-4"
+      class="flex items-center justify-center min-h-screen flex-col px-4 mb-10"
     >
       <div
         class="bg-white/5 backdrop-blur-md p-10 rounded-3xl shadow-xl w-full max-w-3xl border-white/50"
@@ -123,50 +123,50 @@
           *If your data is decimal use dot (.)
         </p>
       </div>
+    </section>
 
-      <hr class="my-10 border-white/20 w-full max-w-3xl" />
+    <hr class="my-10 border-white/20 w-full max-w-3xl" />
 
-      <section id="result" class="w-full max-w-4xl hidden">
-        <h2 class="text-white text-3xl font-bold mb-10 text-center">
-          Prediction Result
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+    <section id="result" class="w-full max-w-4xl mx-auto hidden mt-10 mb-10">
+      <h2 class="text-white text-3xl font-bold mb-10 text-center">
+        Prediction Result
+      </h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div
+          class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white"
+        >
           <div
-            class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white"
+            class="w-20 h-20 mr-6 overflow-hidden flex items-center justify-center"
           >
-            <div
-              class="w-20 h-20 mr-6 overflow-hidden flex items-center justify-center"
-            >
-              <img
-                src="{{ url_for('static', filename='assets/icons/crop.png') }}"
-                alt="Crop Icon"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <div>
-              <h3 class="text-lg font-bold mb-1">Predicted Crop</h3>
-              <p class="text-sm leading-relaxed" id="predictedLabel">-</p>
-            </div>
+            <img
+              src="{{ url_for('static', filename='assets/icons/crop.png') }}"
+              alt="Crop Icon"
+              class="w-full h-full object-cover"
+            />
           </div>
-          <div
-            class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white"
-          >
-            <div
-              class="w-20 h-20 mr-6 overflow-hidden flex items-center justify-center"
-            >
-              <img
-                src="{{ url_for('static', filename='assets/icons/fertilizer.png') }}"
-                alt="Crop Icon"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <div>
-              <h3 class="text-lg font-bold mb-1">Fertility Score</h3>
-              <p class="text-sm leading-relaxed" id="fertilityScore">-</p>
-            </div>
+          <div>
+            <h3 class="text-lg font-bold mb-1">Predicted Crop</h3>
+            <p class="text-sm leading-relaxed" id="predictedLabel">-</p>
           </div>
         </div>
-      </section>
+        <div
+          class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white"
+        >
+          <div
+            class="w-20 h-20 mr-6 overflow-hidden flex items-center justify-center"
+          >
+            <img
+              src="{{ url_for('static', filename='assets/icons/fertilizer.png') }}"
+              alt="Crop Icon"
+              class="w-full h-full object-cover"
+            />
+          </div>
+          <div>
+            <h3 class="text-lg font-bold mb-1">Fertility Score</h3>
+            <p class="text-sm leading-relaxed" id="fertilityScore">-</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer class="text-center text-white py-6">
@@ -205,6 +205,7 @@
             predictedLabelElement.textContent = result.predicted_crop;
             fertilityScoreElement.textContent = result.fertility_score;
             resultSection.classList.remove("hidden");
+            resultSection.scrollIntoView({ behavior: "smooth" });
           }
         } catch (error) {
           alert("Gagal mengirim data ke server.");
