--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
       
         <!-- Left Side -->
         <div class="w-1/3 flex justify-end items-center">
-          <div class="bg-white/5 backdrop-blur-sm p-6 rounded-[20px] border-2 border-white/50 shadow-md max-w-md">
+          <div class="bg-white/5 backdrop-blur-sm p-6 rounded-[20px] border border-white/50 shadow-md max-w-md">
             <h3 class="text-3xl text-white font-bold text-center">Model’s Accuracy</h3>
     
             <div class="text-7xl text-white mt-6 mb-4 mx-24 font-extrabold text-center">87%</div>
@@ -46,7 +46,7 @@
     
         <!-- Right Side -->
         <div class="w-2/3 flex justify-start items-center">
-          <div class="bg-white/5 backdrop-blur-sm p-6 rounded-[20px] border-2 border-white/50 shadow-md">
+          <div class="bg-white/5 backdrop-blur-sm p-6 rounded-[20px] border border-white/50 shadow-md">
             <h3 class="text-3xl text-white font-bold text-center mb-8">How We Predict the Best Crops for Your Land</h3>
             <div class="flex justify-center items-center mb-8">
               <div class="w-1/2 flex items-center">
@@ -77,7 +77,7 @@
   </section>
   
   <section id="visualized" class="relative py-20 flex items-center justify-center px-4">
-    <div class="bg-white/5 backdrop-blur-sm p-6 rounded-[25px] border-2 border-white/50 shadow-md w-full max-w-6xl text-white text-center">
+    <div class="bg-white/5 backdrop-blur-sm p-6 rounded-[25px] border border-white/50 shadow-md w-full max-w-6xl text-white text-center">
       
       <h2 class="text-3xl text-white font-bold text-center mb-2">
         Key Factors Influencing Crop Choices
