--- a/templates/input_data.html
+++ b/templates/input_data.html
@@ -23,14 +23,17 @@
       class="flex items-center justify-center min-h-screen flex-col px-4 mb-10"
     >
       <div
-        class="bg-white/5 backdrop-blur-md p-10 rounded-3xl shadow-xl w-full max-w-3xl border-white/50"
+        class="bg-white/5 backdrop-blur-md border border-white/50 p-10 rounded-3xl shadow-xl w-full max-w-3xl"
       >
-        <h1 class="text-white text-2xl font-semibold text-center mb-8">
+        <h1 class="text-white text-3xl font-bold text-center">
           Input the Samples Data
         </h1>
+        <p class="text-white text-center text-sm mt-2 mb-12">
+          *If your data is decimal, use a dot (.)
+        </p>
         <form
           id="cropForm"
-          class="grid grid-cols-1 md:grid-cols-2 gap-5 text-white"
+          class="grid grid-cols-1 md:grid-cols-2 gap-y-4 gap-x-8 text-white"
         >
           <div>
             <label for="temperature" class="block mb-1 font-medium"
@@ -40,7 +43,7 @@
               name="temperature"
               id="temperature"
               type="text"
-              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              class="w-full px-4 py-2 rounded-lg bg-white/10 border border-white focus:outline-none"
               required
             />
           </div>
@@ -52,7 +55,7 @@
               name="humidity"
               id="humidity"
               type="text"
-              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              class="w-full px-4 py-2 rounded-lg bg-white/10 border border-white focus:outline-none"
               required
             />
           </div>
@@ -64,7 +67,7 @@
               name="rainfall"
               id="rainfall"
               type="text"
-              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              class="w-full px-4 py-2 rounded-lg bg-white/10 border border-white focus:outline-none"
               required
             />
           </div>
@@ -74,7 +77,7 @@
               name="N"
               id="N"
               type="text"
-              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              class="w-full px-4 py-2 rounded-lg bg-white/10 border border-white focus:outline-none"
               required
             />
           </div>
@@ -84,7 +87,7 @@
               name="K"
               id="K"
               type="text"
-              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              class="w-full px-4 py-2 rounded-lg bg-white/10 border border-white focus:outline-none"
               required
             />
           </div>
@@ -96,7 +99,7 @@
               name="P"
               id="P"
               type="text"
-              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              class="w-full px-4 py-2 rounded-lg bg-white/10 border border-white focus:outline-none"
               required
             />
           </div>
@@ -106,34 +109,29 @@
               name="ph"
               id="ph"
               type="text"
-              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              class="w-full px-4 py-2 rounded-lg bg-white/10 border border-white focus:outline-none"
               required
             />
           </div>
-          <div class="md:col-span-2 flex justify-center mt-4">
+          <div class="md:col-span-2 flex justify-center mt-8">
             <button
               type="submit"
-              class="bg-lime-300 text-black font-semibold px-8 py-2 rounded-full hover:bg-lime-400 transition"
+              class="bg-lime-300 text-gray-900 font-semibold px-8 py-2 rounded-2xl hover:bg-lime-400 transition"
             >
-              Check
+              Get Prediction
             </button>
           </div>
         </form>
-        <p class="text-white text-sm mt-4 italic text-center">
-          *If your data is decimal use dot (.)
-        </p>
       </div>
     </section>
 
-    <hr class="my-10 border-white/20 w-full max-w-3xl" />
-
-    <section id="result" class="w-full max-w-4xl mx-auto hidden mt-10 mb-10">
+    <section id="result" class="w-full max-w-4xl mx-auto mt-20 mb-20">
       <h2 class="text-white text-3xl font-bold mb-10 text-center">
         Prediction Result
       </h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div
-          class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white"
+          class="flex items-center bg-white/5 backdrop-blur-md border border-white/50 p-6 rounded-xl text-white"
         >
           <div
             class="w-20 h-20 mr-6 overflow-hidden flex items-center justify-center"
@@ -145,12 +143,12 @@
             />
           </div>
           <div>
-            <h3 class="text-lg font-bold mb-1">Predicted Crop</h3>
-            <p class="text-sm leading-relaxed" id="predictedLabel">-</p>
+            <h3 class="text-md font-medium mb-1">Predicted Crop</h3>
+            <p class="text-2xl font-bold leading-relaxed" id="predictedLabel">-</p>
           </div>
         </div>
         <div
-          class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white"
+          class="flex items-center bg-white/5 backdrop-blur-md border border-white/50 p-6 rounded-xl text-white"
         >
           <div
             class="w-20 h-20 mr-6 overflow-hidden flex items-center justify-center"
@@ -162,8 +160,8 @@
             />
           </div>
           <div>
-            <h3 class="text-lg font-bold mb-1">Fertility Score</h3>
-            <p class="text-sm leading-relaxed" id="fertilityScore">-</p>
+            <h3 class="text-md font-medium mb-1">Fertility Score</h3>
+            <p class="text-2xl font-bold leading-relaxed" id="fertilityScore">-</p>
           </div>
         </div>
       </div>
